--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@clr/icons": "2.3.4",
     "@clr/ui": "2.3.4",
     "@webcomponents/custom-elements": "^1.0.0",
+    "json2typescript": "^1.2.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
