--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@clr/angular": "^2.3.4",
     "@clr/icons": "2.3.4",
     "@clr/ui": "2.3.4",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@webcomponents/custom-elements": "^1.0.0",
     "json2typescript": "^1.2.3",
     "rxjs": "~6.4.0",
